Enable native access for the test JVM
Layoutlib loads its native runtime with System.load, which JDK 24+
restricts (JEP 472). The JDK warns now and will block the call in a
future release. The flag is accepted on every JDK that can run
Paparazzi, which targets Java 21.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>